@@ -1,26 +1,13 @@
-# Java Does USB: USB library for Java
+# Java Does USB: USB Library for Java
 
 [![javadoc](https://javadoc.io/badge2/net.codecrete.usb/java-does-usb/javadoc.svg)](https://javadoc.io/doc/net.codecrete.usb/java-does-usb)
 
-*Java Does USB* is a library for working with USB devices from Java. It allows to query information about all conntected USB devices and to communicate with USB devices using custom / vendor specific protocols. (It is not intended for communication with standard types of USB devices such as mass storage devices, keyboards etc.)
+*Java Does USB* is a library for working with USB devices. It allows to query information about all conntected USB devices and to communicate with USB devices using custom / vendor specific protocols. (It is not intended for communication with standard types of USB devices such as mass storage devices, keyboards etc.)
 
-The library uses the [Foreign Function & Memory API](https://github.com/openjdk/panama-foreign) to access native APIs of the underlying operating system. It only uses Java code and does not need JNI or any native third-party library.
-
-The Foreign Function & Memory API (aka as project Panama) is in preview and will be introduced in a future Java version. Currently, it can be tested with Java 19 Early Access (with preview features enabled).
-
-
-## Prerequisite
-
-- Java 19, preview features enabled (available at https://www.azul.com/downloads/?package=jdk)
-- Windows (x86 64-bit), macOS (x86 64-bit, ARM 64-bit) or Linux 64 bit (x86 64-bit, ARM 64-bit)
-
-It has been tested with Azul Zulu 19.0.77 EA 34.
-
+The library uses the [Foreign Function & Memory API](https://github.com/openjdk/panama-foreign) to access native APIs of the underlying operating system. It only uses Java code and does not need JNI or any native third-party library. The *Foreign Function & Memory API* (aka as project Panama) is in preview and will be introduced in a future Java version. Currently, it can be tested with Java 19 (with preview features enabled).
 
 
 ## Features
-
-### Implemented
 
 - Single API for all operating systems (similar to WebUSB API)
 - Enumeration of USB devices
@@ -30,7 +17,7 @@ It has been tested with Azul Zulu 19.0.77 EA 34.
 - Support for alternate interface settings, composite devices and interface association
 - Published on Maven Central
 
-### To do
+### Planned
 
 - Isochronous transfer
 
@@ -41,21 +28,76 @@ It has been tested with Azul Zulu 19.0.77 EA 34.
 - Providing information about USB buses, controllers and hubs
 
 
-## Platform-specific considerations
+## Getting Started
+
+The library is available at Maven Central. To use it, just add it to your Maven or Gradle project.
+
+If you are using Maven, add the below dependency to your pom.xml:
+
+```xml
+<dependency>
+      <groupId>net.codecrete.usb</groupId>
+      <artifactId>java-does-usb</artifactId>
+      <version>0.4.0</version>
+</dependency>
+```
+
+If you are using Gradle, add the below dependency to your build.gradle file:
+
+```groovy
+compile group: 'net.codecrete.usb', name: 'java-does-usb', version: '0.4.0'
+```
+
+```java
+package net.codecrete.usb.sample;
+
+import net.codecrete.usb.USB;
+
+public class EnumerateDevices {
+
+    public static void main(String[] args) {
+        for (var device : USB.getAllDevices()) {
+            System.out.println(device);
+        }
+    }
+}
+```
+
+
+## Documentation
+
+- [Javadoc](https://javadoc.io/doc/net.codecrete.usb/java-does-usb) 
+
+
+## Examples
+
+- [Bulk Transfer](examples/bulk_transfer/) demonstrates how to find a USB device, open it and communicate using bulk transfer.
+- [Enumeration](examples/enumerate/) lists all connected USB devices and displays information about interfaces and endpoints.
+- [Monitor](examples/monitor/) lists the connected USB devices and then monitors for USB devices being connected and disconnnected.
+
+
+## Prerequisite
+
+- Java 19, preview features enabled (available at https://www.azul.com/downloads/?package=jdk)
+- Windows (x86 64-bit), macOS (x86 64-bit, ARM 64-bit) or Linux 64 bit (x86 64-bit, ARM 64-bit)
+
+
+
+## Platform-specific Considerations
 
 
 ### macOS
 
-No special considerations apply. Using this library, a Java application can connect to any USB device and claim any interfaces that aren't claimed by an operating system driver or another application.
+No special considerations apply. Using this library, a Java application can connect to any USB device and claim any interfaces that isn't claimed by an operating system driver or another application.
 
 
 ### Linux
 
 *libudev* is used to discover and monitor USB devices. It is closely tied to *systemd*. So the library only runs on Linux distributions with *systemd* and the related libraries. The majority of Linux distributions suitable for desktop computing (as opposed to distributions optimized for containers) fulfill this requirement.
 
-Similar to macOS, a Java application can connect to any USB device and claim any interfaces that aren't claimed by an operating system driver or another application.
+Similar to macOS, a Java application can connect to any USB device and claim any interfaces that isn't claimed by an operating system driver or another application.
 
-Most Linux distributions by default set up user accounts without the permission to access USB devices directly. The *udev* system daemon is responsible for assigning permissions to USB devices. It can be configured to assign specific permissions or ownership.
+Most Linux distributions by default set up user accounts without the permission to access USB devices directly. The *udev* system daemon is responsible for assigning permissions to USB devices. It can be configured to assign specific permissions or ownership:
 
 Create a file called `/etc/udev/rules.d/80-javadoesusb-udev.rules` with the below content:
 
@@ -63,7 +105,7 @@ Create a file called `/etc/udev/rules.d/80-javadoesusb-udev.rules` with the belo
 SUBSYSTEM=="usb", ATTRS{idVendor}=="cafe", MODE="0666"
 ```
 
-This adds the rule to assign permission mode 0666 to all USB devices with vendor ID `0xCAFE`. This unregistered vendor ID is used by test device.
+This adds the rule to assign permission mode 0666 to all USB devices with vendor ID `0xCAFE`. This unregistered vendor ID is used by the test devices.
 
 
 ### Windows
@@ -82,20 +124,6 @@ The library has not been tested on Windows for ARM64. It might or might not work
 ### 32-bit versions
 
 The Foreign Function & Memory API has not been implemented for 32-bit operating systems / JDKs. So it does not support them (and likely never will).
-
-
-
-## Documentation
-
-- [Javadoc](https://javadoc.io/doc/net.codecrete.usb/java-does-usb) 
-
-
-
-## Examples
-
-- [Bulk Transfer](examples/bulk_transfer/) demonstrates how to find a USB device, open it and communicate using bulk transfer.
-- [Enumeration](examples/enumerate/) lists all connected USB devices and displays information about interfaces and endpoints.
-- [Monitor](examples/monitor/) lists the connected USB devices and then monitors for USB devices being connected and disconnnected.
 
 
 
@@ -125,10 +153,4 @@ Or (if modules are ignored):
 
 ```
 --enable-preview --enable-native-access=ALL-UNNAMED
-```
-
-If you don't have the test device, you can get a glimpse at the library running the below command. It enumerates all connected USB devices.
-
-```
-MAVEN_OPTS="--enable-preview --enable-native-access=ALL-UNNAMED" mvn install exec:java -Dexec.classpathScope="test" -DskipTests -Dexec.mainClass="net.codecrete.usb.sample.EnumerateDevices"
 ```
